<resources>
    <string name="app_name">RealEstateApp</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_navigation">Navigation</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_gallery">Gallery</string>
    <string name="title_activity_contact_us">ContactUs</string>
    <string name="title_activity_testimonial">Testimonial</string>
    <string name="title_activity_locations">Map</string>
    <string name="view_gallery">View Gallery</string>
    <string name="contact_us">Contact us</string>
    <string name="testimonials">Testimonials</string>
    <string name="our_locations">Our Locations</string>
    <string name="logo">logo</string>
</resources>
