<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/content_navigation"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="app.koki.com.realestateapp.Navigation"
    tools:showIn="@layout/app_bar_navigation"
    android:background="#37474F">

    <ImageView
        android:layout_width="175dp"
        android:layout_height="175dp"
        app:srcCompat="@drawable/logo"
        android:id="@+id/imageView2"
        android:layout_marginTop="20dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/logo"/>

    <Button
        android:text="@string/view_gallery"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="47dp"
        android:id="@+id/btnViewGallery"
        android:background="#000000"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:layout_marginBottom="5dp"
        android:onClick="clickViewGallery" />

    <Button
        android:text="@string/our_locations"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnOurLocations"
        android:layout_below="@+id/btnViewGallery"
        android:layout_alignStart="@+id/btnViewGallery"
        android:background="#000000"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:layout_marginBottom="5dp"
        android:onClick="clickOurLocations" />

    <Button
        android:text="@string/testimonials"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnTestimonials"
        android:layout_below="@+id/btnOurLocations"
        android:layout_alignStart="@+id/btnOurLocations"
        android:background="#000000"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:layout_marginBottom="5dp"
        android:onClick="clickTestimonials" />

    <Button
        android:text="@string/contact_us"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnTestimonials"
        android:layout_alignStart="@+id/btnTestimonials"
        android:id="@+id/btnContactUs"
        android:background="#000000"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        android:layout_marginBottom="5dp"
        android:onClick="clickContactUs" />
</RelativeLayout>
